--- a/IElement/Elements.csproj
+++ b/IElement/Elements.csproj
@@ -41,12 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Capacitor.cs" />
-    <Compile Include="Circuit.cs" />
-    <Compile Include="IElement.cs" />
-    <Compile Include="Inductor.cs" />
+    <Compile Include="Circuit\ParallelCircuit.cs" />
+    <Compile Include="Circuit\SerialCircuit.cs" />
+    <Compile Include="Primitives\Capacitor.cs" />
+    <Compile Include="Circuit\Circuit.cs" />
+    <Compile Include="Circuit\ICircuit.cs" />
+    <Compile Include="IComponent.cs" />
+    <Compile Include="Primitives\Inductor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resistor.cs" />
+    <Compile Include="Primitives\Resistor.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
