Записал все пять схем, сделал форму для изменения компонентов

--- a/CircuitView/CircuitView.csproj
+++ b/CircuitView/CircuitView.csproj
@@ -66,6 +66,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="ChangeForm.resx">
+      <DependentUpon>ChangeForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\CircuitControl.resx">
       <DependentUpon>CircuitControl.cs</DependentUpon>
     </EmbeddedResource>
