--- a/CircuitView/CircuitView.csproj
+++ b/CircuitView/CircuitView.csproj
@@ -52,11 +52,11 @@
     <Compile Include="ChangeForm.Designer.cs">
       <DependentUpon>ChangeForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controls\CircuitControl.cs">
+    <Compile Include="Controls\DrawControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Controls\CircuitControl.Designer.cs">
-      <DependentUpon>CircuitControl.cs</DependentUpon>
+    <Compile Include="Controls\DrawControl.Designer.cs">
+      <DependentUpon>DrawControl.cs</DependentUpon>
     </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -69,8 +69,8 @@
     <EmbeddedResource Include="ChangeForm.resx">
       <DependentUpon>ChangeForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Controls\CircuitControl.resx">
-      <DependentUpon>CircuitControl.cs</DependentUpon>
+    <EmbeddedResource Include="Controls\DrawControl.resx">
+      <DependentUpon>DrawControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
